--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <a href="data/CV.pdf">CV</a> &nbsp/&nbsp
                 <!-- <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp -->
                 <a href="https://scholar.google.com/citations?user=ISXmB9MAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
-                <!-- <a href="https://www.linkedin.com/in/elisabetta-f-0a35bb113">Linkedin</a> &nbsp/&nbsp
-                <a href="https://github.com/elisabettafedele/">Github</a> -->
+                <a href="https://www.linkedin.com/in/taichi-liu-58a9102b4/">Linkedin</a> &nbsp/&nbsp
+                <!-- <a href="https://github.com/elisabettafedele/">Github</a> -->
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
